@@ -2,6 +2,7 @@
 
 = 1.8.0 - 2020-xx-xx =
 * Add - Include information about failing payment into order notes.
+* Fix - Fix crash when a user has 10 or more saved credit cards.
 
 = 1.7.0 - 2020-11-17 =
 * Fix - Fix ordering of payment detail timeline events.
